# embl-my-gbk

./: .gitignore  29766_PacBio125_Mafa_annotated.emb  README.md  ipd_converter.mo.py  novel_papio_alleles.embl  pyproject.toml  requirements.txt  tmp1.emb  tmp1.gb
docs/: index.html  search.js
docs/embl_my_genbank/: embl_my_genbank.html
embl_my_genbank/: __main__.py  embl_my_genbank.py
mafa_input/: 29766_PacBio125_Mafa_annotated.gb
mamu_input/: 29766_PacBio125_Mamu_annotated.gb
sandbox/: emblmygff_command.sh  ipd_converter.mo.py
src/embl_my_genbank/: __main__.py  embl_my_genbank.py
test/data/: 26329_PacBio118_Novels_NM.embl  26329_PacBio118_old_gbk.gb
